# fire-game-sim

./: .gitignore  Cargo.toml  README.md
fire-sim/: Cargo.toml
fire-sim/src/: lib.rs
float_pair/: Cargo.toml
float_pair/src/: lib.rs
map-generator/map-gen/collection/: .p5rc
map-generator/map-gen/collection/map_gen/: index.html  pair.js  sketch.js
sim/: Cargo.toml  Makefile.toml  index.html  model_plan.md
sim/benches/: perf.rs  sim_bench.rs
sim/data_processing/input/: input.ipynb  output.ipynb  output_bayesian.ipynb
sim/helper/: clear_out.py  run_bayesian.py  run_data.py
sim/inputs/tests/: base_input.json
sim/inputs/tests/fire_spread/: f_s_test_val_0.1.json  f_s_test_val_0.12.json  f_s_test_val_0.14.json  f_s_test_val_0.15.json  f_s_test_val_0.16.json  f_s_test_val_0.18.json  f_s_test_val_0.2.json  f_s_test_val_0.25.json  f_s_test_val_0.3.json  f_s_test_val_0.35.json  f_s_test_val_0.4.json  f_s_test_val_0.45.json  f_s_test_val_0.5.json  f_s_test_val_0.55.json  f_s_test_val_0.6.json  f_s_test_val_0.65.json  f_s_test_val_0.7.json  f_s_test_val_0.75.json  f_s_test_val_0.8.json  f_s_test_val_0.85.json  f_s_test_val_0.9.json  qf_s_test_val_0.15.json
sim/output_eval/: 05_03_23_14_49.txt  05_03_23_18_43.txt  05_03_23_23_28.txt  06_03_23_00_39.txt  06_03_23_00_44.txt  06_03_23_17_46.txt  06_03_23_19_10.txt  bayesian_res.csv  bayesian_res.txt  lcld.txt  lcld_1.txt  ratiorew.txt  ratrew_1.txt  statdyn.txt  statdyn_1.txt
sim/proptest-regressions/model/evacuee_mod/: evacuee.txt
sim/proptest-regressions/model/evacuee_mod/fire_influence/: dynamic_influence.txt  fire_influence.txt  frontier.txt
sim/proptest-regressions/model/lerp/: equations.txt
sim/src/: import.rs  lib.rs  main.rs
sim/src/model/: arg_handling.rs  cell.rs  death.rs  escape.rs  fire_spread.rs  grid.rs  mod.rs  search.rs  state.rs  state_builder.rs  transition.rs
sim/src/model/bayesian_search/: mod.rs  search.rs
sim/src/model/evacuee_mod/: dynamic_influence.rs  evacuee.rs  evacuee_cell.rs  mod.rs  static_influence.rs  strategy.rs
sim/src/model/evacuee_mod/fire_influence/: dynamic_influence.rs  fire_influence.rs  frontier.rs  mod.rs
sim/src/model/evacuee_mod/frontier/: frontier_struct.rs  mod.rs
sim/src/model/evacuee_mod/strategies/: aspiration_strategy.rs  mod.rs  ratio_strategy.rs  reward_strategy.rs
sim/src/model/file_handling/: file_handler.rs  mod.rs
sim/src/model/fire_mod/: fire_cell.rs  fire_spread.rs  mod.rs
sim/src/model/ga_search/: ga_explore.rs  mod.rs
sim/src/model/input_handling/: dist_handling.rs  fire_input.rs  import.rs  mod.rs  to_sim.rs
sim/src/model/lerp/: equations.rs
sim/src/model/misc/: misc_func.rs  mod.rs
sim/src/visualization/: cell_vis.rs  custom_systems.rs  exit_agent.rs  mod.rs  sea_vis.rs
sim/weights/: optimal_weights.txt
