[package]
name = "sim"
version = "0.1.0"
edition = "2021"
authors = ["Christos Demetriou"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
itertools = "0.10.5"
# krabmaga = "0.2.0"
krabmaga = {git = "https://github.com/krABMaga/krABMaga"}
mockall = "0.11.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_derive2 = "0.1.18"

[features]
default = ["visualization"]
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]
