[package]
name = "sim"
version = "0.1.0"
edition = "2021"
authors = ["Christos Demetriou"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "sim_bench"
harness = false

[profile.bench]
debug = true

[dependencies]
approx = "0.5.1"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
clippy = "0.0.302"
color-eyre = "0.6.2"
criterion = "0.4.0"
eyre = "0.6.8"
itertools = "0.10.5"
# krabmaga = "0.2.*"
krabmaga = {git = "https://github.com/krABMaga/krABMaga"}
lerp = "0.4.0"
mockall = "0.11.3"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_derive2 = "0.1.18"
rand_distr = "0.4.3"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
thiserror = "1.0.40"

[features]
default = ["bayesian"]
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]
bayesian = ["krabmaga/bayesian"]
search = []
ga_search = []

# [target.'cfg(not(windows))'.dev-dependencies]
# criterion = { version = "0.4.0", features = ["html_reports"] }
# pprof = { version = "0.11.1", features = ["flamegraph"] }
